--- a/enrol/database/config.html
+++ b/enrol/database/config.html
@@ -148,6 +148,26 @@
 </tr>
 
 <tr>
+    <td align="right">enrol_db_remotetimestartfield:</td>
+    <td>
+        <input size="15" type="text" name="enrol_db_remotetimestartfield" value="<?php echo $frm->enrol_db_remotetimestartfield ?>" />
+    </td>
+    <td>
+    <?php  print_string("remotetimestartfield","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_db_remotetimeendfield:</td>
+    <td>
+        <input size="15" type="text" name="enrol_db_remotetimeendfield" value="<?php echo $frm->enrol_db_remotetimeendfield ?>" />
+    </td>
+    <td>
+    <?php  print_string("remotetimeendfield","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
    <th colspan="2" scope="col">
         <?php print_string('roles', 'role') ?>
    </th>
@@ -188,6 +208,16 @@
 </tr>
 
 <tr>
+    <td align="right">enrol_db_autoupdate:</td>
+    <td>
+    <?php choose_from_menu($yesno, "enrol_db_autoupdate", $frm->enrol_db_autoupdate, ""); ?>
+    </td>
+    <td>
+    <?php print_string('autoupdate', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
         <td align="right">enrol_db_category:</td>
         <td>
     <?php
@@ -204,6 +234,19 @@
 </tr>
 
 <tr>
+    <td align="right">enrol_autocreate_category:</td>
+    <td>
+    <?php
+       choose_from_menu($yesno, "enrol_autocreate_category", $frm->enrol_autocreate_category, "");
+           if (isset($err["enrol_autocreate_category"])) formerr($err["enrol_autocreate_category"]); 
+    ?>
+    </td>
+    <td>
+    <?php  print_string("autocreatecategory","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
     <td align="right">enrol_db_template:</td>
         <td>
     <input name="enrol_db_template" type="text" size="30" value="<?php echo $frm->enrol_db_template?>" />
@@ -214,9 +257,243 @@
 </tr>
 
 <tr>
-   <th colspan="2" scope="col">
-        <?php print_string("general_options", "enrol_database") ?>
-   </th>
+    <td align="right">enrol_coursetable:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursetable" value="<?php echo $frm->enrol_coursetable ?>" />
+    </td>
+    <td>
+    <?php print_string("coursetable","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursefullname:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursefullname" value="<?php echo $frm->enrol_coursefullname ?>" />
+    </td>
+    <td>
+    <?php  print_string("coursefullname","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_courseshortname:</td>
+    <td>
+    <input size="15" type="text" name="enrol_courseshortname" value="<?php echo $frm->enrol_courseshortname ?>" />
+    </td>
+    <td>
+    <?php  print_string("courseshortname","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_courseid:</td>
+    <td>
+    <input size="15" type="text" name="enrol_courseid" value="<?php echo $frm->enrol_courseid ?>" />
+    </td>
+    <td>
+    <?php  print_string("courseid","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursesummary:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursesummary" value="<?php echo $frm->enrol_coursesummary ?>" />
+    </td>
+    <td>
+    <?php  print_string("coursesummary","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursecategory:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursecategory" value="<?php echo $frm->enrol_coursecategory ?>" />
+    </td>
+    <td>
+    <?php  print_string("coursecategory","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_category_separator:</td>
+        <td>
+    <input name="enrol_category_separator" type="text" size="15" value="<?php echo $frm->enrol_category_separator?>" />
+    <?php  if (isset($err["enrol_category_separator"])) formerr($err["enrol_category_separator"]); ?>
+    </td><td>
+    <?php  print_string("categoryseparator","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursestartdate:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursestartdate" value="<?php echo $frm->enrol_coursestartdate ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursestartdate', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_courseformat:</td>
+    <td>
+    <input size="15" type="text" name="enrol_courseformat" value="<?php echo $frm->enrol_courseformat ?>" />
+    </td>
+    <td>
+    <?php  print_string('courseformat', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursetheme:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursetheme" value="<?php echo $frm->enrol_coursetheme ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursetheme', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursepassword:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursepassword" value="<?php echo $frm->enrol_coursepassword ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursepassword', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_courseguest:</td>
+    <td>
+    <input size="15" type="text" name="enrol_courseguest" value="<?php echo $frm->enrol_courseguest ?>" />
+    </td>
+    <td>
+    <?php  print_string('courseguest', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursenumsections:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursenumsections" value="<?php echo $frm->enrol_coursenumsections ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursenumsections', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_courseidnumber:</td>
+    <td>
+    <input size="15" type="text" name="enrol_courseidnumber" value="<?php echo $frm->enrol_courseidnumber ?>" />
+    </td>
+    <td>
+    <?php  print_string('courseidnumber', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursecost:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursecost" value="<?php echo $frm->enrol_coursecost ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursecost', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursenewsitems:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursenewsitems" value="<?php echo $frm->enrol_coursenewsitems ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursenewsitems', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_courseshowgrades:</td>
+    <td>
+    <input size="15" type="text" name="enrol_courseshowgrades" value="<?php echo $frm->enrol_courseshowgrades ?>" />
+    </td>
+    <td>
+    <?php  print_string('courseshowgrades', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursegroupmode:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursegroupmode" value="<?php echo $frm->enrol_coursegroupmode ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursegroupmode', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursegroupmodefoce:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursegroupmodefoce" value="<?php echo $frm->enrol_coursegroupmodefoce ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursegroupmodefoce', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursevisible:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursevisible" value="<?php echo $frm->enrol_coursevisible ?>" />
+    </td>
+    <td>
+    <?php  print_string('coursevisible', 'enrol_database') ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_courseenrollable:</td>
+    <td>
+    <input size="15" type="text" name="enrol_courseenrollable" value="<?php echo $frm->enrol_courseenrollable; ?>" />
+    </td>
+    <td>
+    <?php print_string('courseenrollable', 'enrol_database'); ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_coursetemplate:</td>
+    <td>
+    <input size="15" type="text" name="enrol_coursetemplate" value="<?php echo $frm->enrol_coursetemplate ?>" />
+    </td>
+    <td>
+    <?php  print_string("coursetemplate","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_restore_coursetemplate:</td>
+    <td>
+        <?php choose_from_menu($yesno, "enrol_restore_coursetemplate", $frm->enrol_restore_coursetemplate, ""); ?>
+    </td>
+    <td>
+    <?php  print_string("restore_coursetemplate","enrol_database") ?>
+    </td>
+</tr>
+
+<tr>
+    <td align="right">enrol_restore_usetemplate:</td>
+    <td>
+        <?php choose_from_menu($yesno, "enrol_restore_usetemplate", $frm->enrol_restore_usetemplate, ""); ?>
+    </td>
+    <td>
+    <?php  print_string("restore_usetemplate","enrol_database") ?>
+    </td>
 </tr>
 
 <tr>
